use subl as git editor

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -28,7 +28,7 @@
   ra = !git r --all
 [core]
   excludesfile = ~/.gitignore
-  editor = vi
+  editor = subl -n -w
 [format]
   pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
 [branch]
